--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -80,3 +80,7 @@
         </div>
     </div>	
 {% endblock %}
+
+{% block script %}
+    <script src="{% static "source/js/index.js" %}"></script>
+{% endblock  %}
