--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootstraptema.ru/plugins/2015/audio-touch/audio-touch.css" />
+    <script type="text/javascript" src="https://bootstraptema.ru/plugins/jquery/jquery-1.11.3.min.js"></script>
     {% block css %} {% endblock %}
     <link rel="stylesheet" href="{% static "source/styles/main.css" %}">
+    <link rel="stylesheet" href="{% static "source/styles/progress.css" %}">
+    <link rel="stylesheet" href="{% static "source/styles/all_musics-albums.css" %}">
     <title>{{ title }}</title>
 </head>
 
@@ -24,12 +28,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="all_musics.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-note-list" viewBox="0 0 16 16">
+                            <a class="nav-link" href="{% url "musics:albums" %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-note-list" viewBox="0 0 16 16">
                                 <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2"/>
                                 <path fill-rule="evenodd" d="M12 3v10h-1V3z"/>
                                 <path d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1z"/>
                                 <path fill-rule="evenodd" d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5"/>
-                              </svg> All musics</a>
+                              </svg> All albums</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link login-button" href="login.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
@@ -73,19 +77,63 @@
         {% block content %} {% endblock %}
     </section>
 
-    <footer class="mt-4 fixed-bottom">
+    <footer class="mt-4 fixed-bottom footer-box-shadow">
         <div class="container-fluid bg-body-tertiary" data-bs-theme="dark">
             <div class="row">
-                <div class="col-lg-4 col-md-12 footer-text">
-                    <p>© 2024 From Me</p>
+                <div class="col-lg-3 col-md-2">
+                    <div class="row p-3">
+                        <div class="col-sm-2 col-md-3">
+                            <img src="" class="music_img rounded" style="width: 70px;" alt="">
+                        </div>
+                        <div class="col-sm-6 col-md-8 m-2">
+                            <h3 class="song-title">No title</h3>
+                            <p class="artist">No artiste</p>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-8 footer-text">
+                    <div class="progress_container">
+                        <div class="relative h-1 bg-gray-200 rounded">
+                            <div class="h-full w-2 progress bg-black items-center justify-end">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
+                                <circle cx="8" cy="8" r="8"/>
+                            </svg>
+                            </div>
+                        </div>
+                        </div>
+                
+                        <div class="flex justify-between text-xs font-semibold text-gray-500 px-4 py-2">
+                        <div class="currentDuration">
+                            0:00
+                        </div>
+                        <div class="flex space-x-3 p-2">
+                            <button type="button" class="btn btn-dark prev m-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+                            </svg>
+                            </button>
+                            <button type="button" class="btn btn-dark playing m-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445"/>
+                            </svg>
+                            </button>
+                            <button type="button" class="btn btn-dark next m-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                            </svg>
+                            </button>
+                        </div>
+                        <div class="Duration">
+                            0:00
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-8 col-md-12 footer-text text-center">
+                <div class="col-lg-3 col-md-4">
+                    <audio preload="metadata" autoplay="false" src="" type="audio/mp3"></audio>
                 </div>
             </div>
         </div>
     </footer>
-
-    <script src="{% static "source/js/main.js" %}"></script>
+    <script src="{% static "source/js/footer.js" %}"></script>
+    {% block script %} {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"crossorigin="anonymous"></script>
 </body>
 
