--- a/musics/templates/musics/album.html
+++ b/musics/templates/musics/album.html
@@ -14,10 +14,10 @@
         <div class="container-fluid bg-body-tertiary rounded-top">
           <div class="row">
             <div class="col-8 col-md-4">
-              <img src="{{ album_image }}" class="w-50 m-4 rounded album-image" alt="">
+              <img src="{{ album.image.url }}" class="w-50 m-4 rounded album-image" alt="">
             </div>
             <div class="col-4 col-md-8 mt-4">
-              <h3>{{ album_name }}</h3>
+              <h3>{{ album.name }}</h3>
             </div>
           </div>
         </div>
