--- a/musics/templates/musics/albums.html
+++ b/musics/templates/musics/albums.html
@@ -11,7 +11,7 @@
                 <div class="col-lg-2 col-md-6 mt-4">
                     <div class="card mx-auto" >
                         <a href="{% url "musics:albums_page" album.id %}">
-                            <img src="{{ album.image.url }}" class="card-img-top" alt="{{ album.name }}">
+                            <img src="{{ album.image.url }}" class="card-img-albums" alt="{{ album.name }}">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">
