search musics/albums, volume control

--- a/musics/templates/musics/genre.html
+++ b/musics/templates/musics/genre.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static "source/styles/musics.css" %}">
+    <link rel="stylesheet" href="{% static "source/styles/all_musics-albums.css" %}">
 {% endblock %}
 
 {% block content %}
