--- a/static/source/styles/main.css
+++ b/static/source/styles/main.css
@@ -34,6 +34,20 @@ svg {
     box-shadow: -1px -8px 22px 6px #000000;
 }
 
+input[type="range"]::-webkit-slider-thumb {
+    width: 40%;
+    -webkit-appearance: none;
+    width: 1rem;
+    height: 1rem;
+    background-color: black;
+}
+.volume-icon {
+    display: flex;
+}
+.volume-icon svg {
+    margin-right: 10px;
+}
+
 @media (max-width: 759px) {
     .footer-text {
         margin-top: 0;
