--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,6 @@
     {% block css %} {% endblock %}
     <link rel="stylesheet" href="{% static "source/styles/main.css" %}">
     <link rel="stylesheet" href="{% static "source/styles/progress.css" %}">
-    <link rel="stylesheet" href="{% static "source/styles/all_musics-albums.css" %}">
     <title>{{ title }}</title>
 </head>
 
@@ -82,7 +81,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-2">
                     <div class="row p-3">
-                        <div class="col-sm-2 col-md-3">
+                        <div class="col-6 col-md-3">
                             <img src="" class="music_img rounded" style="width: 70px;" alt="">
                         </div>
                         <div class="col-sm-6 col-md-8 m-2">
@@ -126,13 +125,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4">
+                <div class="col-lg-2 col-md-4 m-4 volume-icon">
                     <audio preload="metadata" autoplay="false" src="" type="audio/mp3"></audio>
-                </div>
+                    <div class="volume-icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-volume-down" viewBox="0 0 16 16">
+                            <path d="M9 4a.5.5 0 0 0-.812-.39L5.825 5.5H3.5A.5.5 0 0 0 3 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 9 12zM6.312 6.39 8 5.04v5.92L6.312 9.61A.5.5 0 0 0 6 9.5H4v-3h2a.5.5 0 0 0 .312-.11M12.025 8a4.5 4.5 0 0 1-1.318 3.182L10 10.475A3.5 3.5 0 0 0 11.025 8 3.5 3.5 0 0 0 10 5.525l.707-.707A4.5 4.5 0 0 1 12.025 8"/>
+                        </svg>
+                    </div>
+                    <input type="range" class="volume form-range" min="0" max="1" step="0.01" value="1">
+                </div>  
             </div>
         </div>
     </footer>
     <script src="{% static "source/js/footer.js" %}"></script>
+    <script src="{% static "source/js/musics.js" %}"></script>
     {% block script %} {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"crossorigin="anonymous"></script>
 </body>
